# simple-farm-tracking

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  runetime.txt
farm_management_app/: admin.py  contextprocessor.py  filters.py  forms.py  models_botanical.py  models_crop_plan.py  models_location.py  models_task.py  models_user.py  tables.py  urls.py  views.py
farm_management_app/migrations/: 0001_initial.py  0002_cropplan_num_rows_cultivar_num_rows_species_num_rows.py  0002_remove_cultivar_cultivar_name_and_more.py  0003_cultivar_abandoned_cultivar_active_cultivar_notes_and_more.py  0003_cultivar_image_url.py  0004_alter_cultivar_varietal_name_and_more.py  0004_rename_amount_available_for_harvest_cropplan_amount_available_for_harvest_kg_and_more.py  0005_area_bed.py  0005_cultivar_temperture_germination_and_more.py  0006_alter_bed_area.py  0007_rename_area_location_and_more.py  0008_alter_bed_area_meters_squared.py  0009_alter_bed_area_meters_squared.py  0010_cropplan.py  0011_rename_harvest_end_date_cropplan_harvest_offical_date_and_more.py  0012_alter_cropplan_harvest_offical_date_and_more.py  0013_alter_cropplan_transplant_date.py  0014_remove_task_bed_task_beds_remove_task_cultivars_and_more.py  0015_alter_task_beds_alter_task_cultivars.py  0016_rename_num_per_meter_cropplan_num_seeds_per_meter_and_more.py  0017_remove_cropplan_temperture_germination.py  0018_cultivar_beds.py  0019_remove_cropplan_cultivars_cropplan_cultivar.py  (+48 more)
permatopia_site/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
(+24 files in other folders)
